# rootNtupleAnalyzerV2

./: .gitignore  CMakeLists.txt  Makefile  Makefile_collections  Makefile_fullNtuple  Makefile_fullNtuple_mergedTree  Pileup_2015_RunIIWinter15GS.txt  README  README.md  README_HowToProcessFullDatasetsOnLxplusBatch  analysisClass_lq_eejj.C  analysisClass_lq_eejj_QCD.C  compile_commands.json  condor_submitAnalysis.sh  condor_submitFlat.sh  condor_submitRSKQCD.sh  condor_submitSEleL.sh  example_LQ_eejj_santanas.txt  testCrabCFg.py
HEM1516file/: analysisClass_lq_eejj.C  analysisClass_lq_eejj_QCD.C  cutTable_lq_eejj_ele1_both_in.txt  cutTable_lq_eejj_ele1_eta_in_phi_out.txt  cutTable_lq_eejj_ele1_phi_in.txt  cutTable_lq_eejj_ele2_both_in.txt  cutTable_lq_eejj_ele2_eta_in_phi_out.txt  cutTable_lq_eejj_ele2_phi_in.txt  cutTable_lq_eejj_ele2_phi_in_QCD.txt  cutTable_lq_eejj_jet1_both_in.txt  cutTable_lq_eejj_jet1_eta_in_phi_out.txt  cutTable_lq_eejj_jet1_phi_in.txt  cutTable_lq_eejj_jet2_both_in.txt  cutTable_lq_eejj_jet2_eta_in_phi_out.txt  cutTable_lq_eejj_jet2_phi_in.txt  cutTable_lq_eejj_jet2_phi_in_QCD.txt  cutTable_lq_eejj_nocut.txt
config/: cutFileExample.txt  datasets_nanoV9_UL2016.txt  datasets_nanoV9_UL2016_postVFP.txt  datasets_nanoV9_UL2016_preVFP.txt  datasets_nanoV9_UL2017.txt  datasets_nanoV9_UL2018.txt  inputListAllCurrent.txt  inputListExample.txt  nanoSkim_keepAndDrop.txt  sampleListForMerging.txt  sampleListForMerging_13TeV_QCD_calc_2016.txt  sampleListForMerging_13TeV_QCD_calc_2016_singlePhotonOnly.txt  sampleListForMerging_13TeV_QCD_calc_2016postVFP.yaml  sampleListForMerging_13TeV_QCD_calc_2016preVFP.yaml  sampleListForMerging_13TeV_QCD_calc_2016preVFPHEEP.yaml  sampleListForMerging_13TeV_QCD_calc_2017.txt  sampleListForMerging_13TeV_QCD_calc_2018.txt  sampleListForMerging_13TeV_QCD_dataDriven.txt  sampleListForMerging_13TeV_QCD_dataDriven_2016.txt  sampleListForMerging_13TeV_QCD_dataDriven_2017.txt  sampleListForMerging_13TeV_QCD_dataDriven_2018.txt  sampleListForMerging_13TeV_QCD_dataDriven_2018.yaml  sampleListForMerging_13TeV_eejj.txt  sampleListForMerging_13TeV_eejj_2016.txt  sampleListForMerging_13TeV_eejj_2016postVFP.yaml  sampleListForMerging_13TeV_eejj_2016preVFP.yaml  sampleListForMerging_13TeV_eejj_2017.txt  sampleListForMerging_13TeV_eejj_2017.yaml  sampleListForMerging_13TeV_eejj_2017_noZToEE.txt  sampleListForMerging_13TeV_eejj_2018.txt  sampleListForMerging_13TeV_eejj_2018.yaml  sampleListForMerging_13TeV_eejj_QCD.txt  sampleListForMerging_13TeV_enujj.txt  sampleListForMerging_13TeV_ttbarBkg_emujj.txt  sampleListForMerging_13TeV_ttbarMC.txt  sampleListForMerging_7TeV.txt  sampleListForMerging_7TeV_QCDfakeRate.txt  sampleListForMerging_7TeV_axigluons_enujj_2011.txt  sampleListForMerging_7TeV_axigluons_lljj_2011.txt  sampleListForMerging_7TeV_axigluons_lnujj_2011.txt  (+26 more)
config/2010/: sampleListForMerging_7TeV_QCDfakeRate.txt  sampleListForMerging_7TeV_enujj.txt  sampleListForMerging_7TeV_enujj_Spring10.txt  xsection_7TeV.txt  xsection_7TeV_Wrescale.txt
config/FullNTupleDatasets/: DYJetsToLL_M-1000to1500_amcatnloFXFX.txt  DYJetsToLL_M-100to200.txt  DYJetsToLL_M-100to200_amcatnloFXFX.txt  DYJetsToLL_M-1500to2000.txt  DYJetsToLL_M-1500to2000_amcatnloFXFX.txt  DYJetsToLL_M-2000to3000.txt  DYJetsToLL_M-2000to3000_amcatnloFXFX.txt  DYJetsToLL_M-200to400.txt  DYJetsToLL_M-200to400_amcatnloFXFX.txt  (+295 more)
crab/: deleteCrabSandboxes.py  launchAnalysis_crab3.py  submit_crab3.py
doc/: QCD_Instructions  README_Axigluons  README_DiJets  README_HowToProcessFullDatasetsOnLxplusBatch  README_HowToRunTheQCDFakeRateStudy.txt  TODO.txt  example_LQ_enujj_santanas.txt  howToMakeAnalysisWithRootTuples_OLD.txt
include/: Collection.h  CorrectionHandler.h  EGammaAreaCorrections.h  Electron.h  GenJet.h  GenParticle.h  HLTFilterObjectCollectionHelper.h  HLTriggerObject.h  HLTriggerObjectCollectionHelper.h  HighPtMuon.h  HistoReader.h  IDTypes.h  LHEParticle.h  LinkDef.h  LooseElectron.h  Lumi3DReWeighting.h  Muon.h  Object.h  PFJet.h  PrescaleProvider.h  QCDFakeRate.h  Run2PhotonTriggerPrescales.h  TTreeReaderTools.h  TriggerEfficiency2016.h  analysisClass.h  baseClass.h  eventListHelper.h  jsonParser.h  likelihoodGetter.h  pileupReweighter.h  qcdFitter.h  rootNtupleClass.h  rootNtupleClass.h.makeselector  rootNtupleClass.h.stockNano
scripts/: BR_Sigma_EE_vsMass.C  BR_Sigma_EE_vsMass.py  BR_Sigma_EE_vsMass.py.template  CMS_lumi.py  FrameworkJobReport.xml  PSet.py  ReadTTreePrint.py  RunStatsBasicCLs.py  RunStatsBasicCLs2.py  calcDataPileup.py  calcFakeRate.py  check2017PU.py  checkDYstitching.py  checkDYstitchingNano.py  checkJobs.py  checkJobs.sh  check_combine_output_batch.py  check_combine_output_batch_ForSkimToCastor.py  check_combine_output_batch_ForSkimToEOS.py  combineCommon.py  combineDatacards.py  combineOutputJobs.py  combinePlots.py  combinePlotsTemplate.py  combineTablesAndPlotsTemplate.py  combineTablesTemplate.py  combineTrees.py  combine_dat_files.py  combine_limits.py  compareBranches.py  compareTables.py  condor_submitEEJJPresel.sh  condor_submitFlat.sh  condor_submitQCDEEJJPresel.sh  condor_submitRSKQCD.sh  condor_submitSEleL.sh  createInputLists.py  createList.pl  createList.py  datFileUtils.py  (+97 more)
src/: Collection.C  CorrectionHandler.C  EGPrescales2016.C  Ele27WPLooseTrigTurnOn.C  Electron.C  ElectronIDs.C  ElectronScaleFactors.C  GenJet.C  GenJetIDs.C  GenParticle.C  GenParticleIDs.C  HLTFilterObjectCollectionHelper.C  HLTriggerObject.C  HLTriggerObjectCollectionHelper.C  HighPtMuon.C  HighPtMuonIDs.C  HistoReader.C  JMEUncertainties.C  LHEParticle.C  LHEParticleIDs.C  LooseElectron.C  Lumi3DReWeighting.cc  Muon.C  MuonIDs.C  MuonScaleFactors.C  Object.C  PFJet.C  PFJetIDs.C  QCDFakeRate.C  TTreeReaderTools.C  TriggerEfficiency2016.C  analysisClass.C  analysisClass_template.C  baseClass.C  eventListHelper.C  jsonParser.C  likelihoodGetter.C  main.C  makeOptCutFile.C  pileupReweighter.C  (+2 more)
test/: FindBestCuts.py  Optimizer.py  Optimizer_plotting.py  analysisClass_testweights.C  makeStackHistoTemplate.py  rdataframeskim.cpp  testRReader.C  testTMVAReader.C
(+2032 files in other folders)
